DBX2006/Dbxsrc/Common/Dbx32.h

 DbxContext;
 TCoord;
 TArc;
 TAttribute;
 TBus;
 TComponent;
 TField;
 TLine;
 TNet;
 TPad;
 TPadViaShape;
 TPadViaStyle;
 TPin;
 TPoint;
 TPort;
 TRoom;
 TSymbol;
 TText;
 TTextStyle;
 TVia;
 TWire;
 TTable;
 TMetaFile;
 TDiagram;
 TDetail;
TItem;
 TPadViaRegularPolyShape;
extern DbxContext     tContext;       
extern long           tStatus;        
long 
DLLX TRotateArc    (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TArc*       pTArc);      
long 
DLLX TRotateAttribute(DbxContext* pContext,  
                    long        angle,       
                    TCoord*     pTCoord,     
                    TAttribute* pTAttr);     
long 
DLLX TRotateBus    (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TBus*       pTBus);      
long 
DLLX TRotateComponent(DbxContext* pContext,  
                    long        angle,       
                    TCoord*     pTCoord,     
                    TComponent* pTComponent);
long 
DLLX TRotateField  (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TField*     pTField);    
long 
DLLX TRotateItem   (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TItem*      pTItem);     
long 
DLLX TRotateLine   (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TLine*      pTLine);     
long 
DLLX TRotatePad    (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TPad*       pTPad);      
long 
DLLX TRotatePin    (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TPin*       pTPin);      
long 
DLLX TRotatePort   (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TPort*      pTPort);     
long 
DLLX TRotateSymbol (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TSymbol*    pTSymbol);   
long
DLLX TRotateTable  (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TTable*     pTTable);    
long 
DLLX TRotateText   (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TText*      pTText);     
long 
DLLX TRotateVia    (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TVia*       pTVia);      
long 
DLLX TRotateWire   (DbxContext* pContext,    
                    long        angle,       
                    TCoord*     pTCoord,     
                    TWire*      pTWire);     
long 
DLLX TSaveComponent   (DbxContext*   pContext);
long
DLLX TSaveDesign (DbxContext * pContext);           
long
DLLX TSelectAllPrintJobs (DbxContext * pContext);   
long
DLLX TSelectPrintJob (DbxContext * pContext,        
                      const char * pJobName);       
long 
DLLX TUnFixAll(DbxContext* pContext);     
long 
DLLX TUnHighlightAll(DbxContext* pContext);     
long 
DLLX TUnHighlightArc (DbxContext* pContext,   
                      TArc*       pTArc);     
long 
DLLX TUnHighlightAttribute (DbxContext* pContext, 
                            TAttribute* pTAttr);  
long 
DLLX TUnHighlightBus       (DbxContext* pContext, 
                            TBus*       pTBus);   
long 
DLLX TUnHighlightComponent(DbxContext* pContext,        
                           TComponent* pTComponent);    
long 
DLLX TUnHighlightDetail (DbxContext* pContext,      
                         TDetail*    pTDetail);     
long 
DLLX TUnHighlightDiagram (DbxContext* pContext,      
                          TDiagram*   pTDiagram);    
long 
DLLX TUnHighlightField (DbxContext* pContext,   
                        TField*     pTField);   
long 
DLLX TUnHighlightItem(DbxContext* pContext,     
                      TItem*      pTItem);      
long 
DLLX TUnHighlightLine(DbxContext* pContext,     
                      TLine*      pTLine);      
long 
DLLX TUnHighlightMetaFile (DbxContext* pContext,      
                           TMetaFile*  pTMetaFile);   
long 
DLLX TUnHighlightNet (DbxContext* pContext,     
                      TNet*       pTNet);       
long 
DLLX TUnHighlightPad (DbxContext* pContext,     
                      TPad*       pTPad);       
long 
DLLX TUnHighlightPin (DbxContext* pContext,     
                      TPin*       pTPin);       
long 
DLLX TUnHighlightPoint(DbxContext* pContext,    
                       TPoint*     pTPoint);    
long 
DLLX TUnHighlightPort (DbxContext* pContext,    
                       TPort*      pTPort);     
long  
DLLX TUnHighlightRoom (DbxContext* pContext,    
                       TRoom*      pTRoom);     
long 
DLLX TUnHighlightSymbol (DbxContext* pContext,  
                         TSymbol*    pTSymbol); 
long
DLLX TUnHighlightTable(DbxContext* pContext,    
                       TTable*     pTTable);    
long 
DLLX TUnHighlightText(DbxContext* pContext,     
                      TText*      pTText);      
long 
DLLX TUnHighlightVia (DbxContext* pContext,     
                      TVia*       pTVia);       
long 
DLLX TUnHighlightWire(DbxContext* pContext,     
                      TWire*      pTWire);      
long  
DLLX TCreatePadStyle(DbxContext*   pContext,   
                     long          fromId,     
                     const char*   pNewName,   
                     TPadViaStyle* pStyle);    
long
DLLX TDeletePadStyle(DbxContext* pContext,      
                     long        padStyleId);   
long 
DLLX TAddPadShape(DbxContext*    pContext,      
                  long           padStyleId,    
                  TPadViaShape*  pPadShape);    
long
DLLX TAddPadRegularPolyShape(DbxContext*              pContext,        
                             long                     padStyleId,      
                             TPadViaRegularPolyShape* pRegPolyShape);  
long
DLLX TAddPadIrregularPolyShape(DbxContext*   pContext,           
                               long          padStyleId,         
                               long          layerId,            
                               long          layerType,          
                               long          isPourNoConn,       
                               long          numberOfPoints,     
                               const TCoord* pPoints);           
long
DLLX TDeletePadShape(DbxContext* pContext,   
                     long        padStyleId, 
                     long        layerId);   
long  
DLLX TCreateViaStyle(DbxContext*   pContext,   
                     long          fromId,     
                     const char*   pNewName,   
                     TPadViaStyle* pStyle);    
long
DLLX TDeleteViaStyle(DbxContext* pContext,      
                     long        viaStyleId);   
long 
DLLX TAddViaShape(DbxContext*    pContext,      
                  long           viaStyleId,    
                  TPadViaShape*  pViaShape);    
long
DLLX TAddViaRegularPolyShape(DbxContext*               pContext,        
                             long                      viaStyleId,      
                             TPadViaRegularPolyShape*  pRegPolyShape);  
long
DLLX TAddViaIrregularPolyShape(DbxContext*   pContext,           
                               long          viaStyleId,         
                               long          layerId,            
                               long          layerType,          
                               long          isPourNoConn,       
                               long          numberOfPoints,     
                               const TCoord* pPoints);            
long
DLLX TDeleteViaShape(DbxContext* pContext,   
                     long        viaStyleId, 
                     long        layerId);   
long  
DLLX TAddTextStyle(DbxContext*   pContext,   
                   long          fromId,     
                   TTextStyle*   pStyle);    
long  
DLLX TDeleteTextStyle(DbxContext*   pContext,   
                      long          styleId);   
long
DLLX TModifyTextStyle(DbxContext* pContext,  
                      TTextStyle* pStyle);   