DBX2006/Dbxsrc/Common/dbx32.BAS


Declare Function TRotateArc Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotArc As TArc) As Long
Declare Function TRotateAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotAttribute As TAttribute) As Long
Declare Function TRotateBus Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotBus As TBus) As Long
Declare Function TRotateComponent Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotComponent As TComponent) As Long
Declare Function TRotateField Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotLine As TField) As Long
Declare Function TRotateItem Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotateItem As TItem) As Long
Declare Function TRotateLine Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotLine As TLine) As Long
Declare Function TRotatePad Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotPad As TPad) As Long
Declare Function TRotatePin Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotPin As TPin) As Long
Declare Function TRotatePort Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotPort As TPort) As Long
Declare Function TRotateSymbol Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotSymbol As TSymbol) As Long
Declare Function TRotateTable Lib "dbx32.dll" (Context As DbxContext,ByVal rotation As Long, rotCoord As TCoord, rotateTable As TTable) As Long
Declare Function TRotateText Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotText As TText) As Long
Declare Function TRotateVia Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotVia As TVia) As Long
Declare Function TRotateWire Lib "dbx32.dll" (Context As DbxContext, ByVal rotation As Long, rotCoord As TCoord, rotWire As TWire) As Long

Declare Function TSaveComponent Lib "dbx32.dll" (Context As DbxContext) As Long
Declare Function TSaveDesign Lib "dbx32.dll" (Context As DbxContext) As Long

Declare Function TSelectAllPrintJobs Lib "dbx32.dll" (Context As DbxContext) As Long
Declare Function TSelectPrintJob Lib "dbx32.dll" (Context As DbxContext, ByVal jobName As String) As Long

Declare Function TUnFixAll Lib "dbx32.dll" (Context As DbxContext) As Long

Declare Function TUnHighlightAll Lib "dbx32.dll" (Context As DbxContext) As Long

Declare Function TUnHighlightArc Lib "dbx32.dll" (Context As DbxContext, highlightItem As TArc) As Long
Declare Function TUnHighlightAttribute Lib "dbx32.dll" (Context As DbxContext, highlightItem As TAttribute) As Long
Declare Function TUnHighlightBus Lib "dbx32.dll" (Context As DbxContext, highlightItem As TBus) As Long
Declare Function TUnHighlightComponent Lib "dbx32.dll" (Context As DbxContext, highlightItem As TComponent) As Long
Declare Function TUnHighlightDetail Lib "dbx32.dll" (Context As DbxContext, highlightItem As TDetail) As Long
Declare Function TUnHighlightDiagram Lib "dbx32.dll" (Context As DbxContext, highlightItem As TDiagram) As Long
Declare Function TUnHighlightField Lib "dbx32.dll" (Context As DbxContext, highlightItem As TField) As Long
Declare Function TUnHighlightItem Lib "dbx32.dll" (Context As DbxContext, highlightItem As TItem) As Long
Declare Function TUnHighlightLine Lib "dbx32.dll" (Context As DbxContext, highlightItem As TLine) As Long
Declare Function TUnHighlightMetaFile Lib "dbx32.dll" (Context As DbxContext, highlightItem As TMetaFile) As Long
Declare Function TUnHighlightNet Lib "dbx32.dll" (Context As DbxContext, highlightNet As TNet) As Long
Declare Function TUnHighlightPad Lib "dbx32.dll" (Context As DbxContext, highlightItem As TPad) As Long
Declare Function TUnHighlightPin Lib "dbx32.dll" (Context As DbxContext, highlightItem As TPin) As Long
Declare Function TUnHighlightPoint Lib "dbx32.dll" (Context As DbxContext, highlightItem As TPoint) As Long
Declare Function TUnHighlightPort Lib "dbx32.dll" (Context As DbxContext, highlightItem As TPort) As Long
Declare Function TUnHighlightRoom Lib "dbx32.dll" (Context As DbxContext, room As TRoom) As Long
Declare Function TUnHighlightSymbol Lib "dbx32.dll" (Context As DbxContext, highlightItem As TSymbol) As Long
Declare Function TUnHighlightTable Lib "dbx32.dll" (Context As DbxContext, highlightItem As TTable) As Long
Declare Function TUnHighlightText Lib "dbx32.dll" (Context As DbxContext, highlightItem As TText) As Long
Declare Function TUnHighlightVia Lib "dbx32.dll" (Context As DbxContext, highlightItem As TVia) As Long
Declare Function TUnHighlightWire Lib "dbx32.dll" (Context As DbxContext, highlightItem As TWire) As Long

Declare Function TCreatePadStyle Lib "dbx32.dll" (Context As DbxContext, ByVal fromId as Long, ByVal styleName As String, padStyle As TPadViaStyle) As Long
Declare Function TDeletePadStyle Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId as Long) As Long
Declare Function TAddPadShape Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId as Long, padShape As TPadViaShape) As Long
Declare Function TAddPadRegularPolyShape Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId as Long, regPolyPadShape As TPadViaRegularPolyShape) As Long
Declare Function TAddPadIrregularPolyShape Lib "dbx32.dll" (ByRef Context As DbxContext, ByVal viaStyleId As Long, ByVal layerId As Long, ByVal layerType As Long, ByVal isPourNoConn As Long, ByVal numberOfPoints As Long, ByRef pPoint As TCoord) As Long
Declare Function TDeletePadShape Lib "dbx32.dll" (Context As DbxContext, ByVal padStyleId as Long, ByVal layerId As Long) As Long

Declare Function TCreateViaStyle Lib "dbx32.dll" (Context As DbxContext, ByVal fromId as Long, ByVal styleName As String, viaStyle As TPadViaStyle) As Long
Declare Function TDeleteViaStyle Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId as Long) As Long
Declare Function TAddViaShape Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId as Long, viaShape As TPadViaShape) As Long
Declare Function TAddViaRegularPolyShape Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId as Long, regPolyViaShape As TPadViaRegularPolyShape) As Long
Declare Function TAddViaIrregularPolyShape Lib "dbx32.dll" (ByRef Context As DbxContext, ByVal viaStyleId As Long, ByVal layerId As Long, ByVal layerType As Long, ByVal isPourNoConn As Long, ByVal numberOfPoints As Long, ByRef pPoint As TCoord) As Long
Declare Function TDeleteViaShape Lib "dbx32.dll" (Context As DbxContext, ByVal viaStyleId as Long, ByVal layerId As Long) As Long

Declare Function TAddTextStyle Lib "dbx32.dll" (Context As DbxContext, ByVal fromId As Long, textStyle As TTextStyle) As Long
Declare Function TDeleteTextStyle Lib "dbx32.dll" (Context As DbxContext, ByVal styleId As Long) As Long
Declare Function TModifyTextStyle Lib "dbx32.dll" (Context As DbxContext, textStyle As TTextStyle) As Long

Global tContext As DbxContext
Global tStatus As Long
Global Unit As Integer
